--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <a class="nav-link shop-page" href="shop.html">Магазин</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link brand-page" href="#">О бренде</a>
+                    <a class="nav-link brand-page" href="about.html">О бренде</a>
                     </li>
                     <li class="nav-item">
                     <a class="nav-link contacts-page" href="#">Контакты</a>
@@ -334,7 +334,7 @@
                         </div>
                     </li>
                     <li class="footer__nav-item nav-item">
-                        <a class="footer__nav-link nav-link brand-page" href="#">О бренде</a>
+                        <a class="footer__nav-link nav-link brand-page" href="about.html">О бренде</a>
                     </li>
                     <li class="footer__nav-item nav-item">
                         <a class="footer__nav-link nav-link contacts-page" href="#">Контакты</a>
