--- a/shop.html
+++ b/shop.html
@@ -32,7 +32,7 @@
                     <a class="nav-link shop-page active" href="shop.html">Магазин</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link brand-page" href="#">О бренде</a>
+                    <a class="nav-link brand-page" href="about.html">О бренде</a>
                     </li>
                     <li class="nav-item">
                     <a class="nav-link contacts-page" href="#">Контакты</a>
@@ -292,11 +292,11 @@
                 <div class="col-5 footer__nav">
                     <ul class="footer__nav-list navbar-nav d-flex flex-row gap-4">
                     <li class="footer__nav-item nav-item">
-                        <a class="footer__nav-link nav-link main-page active" href="#">Главная</a>
+                        <a class="footer__nav-link nav-link main-page" href="index.html">Главная</a>
                     </li>
                     <li class="footer__nav-item nav-item">
                         <div class="footer__nav-shop">
-                            <a class="footer__nav-link nav-link shop-page" href="#">Магазин</a>
+                            <a class="footer__nav-link nav-link shop-page active" href="shop.html">Магазин</a>
                             <ul class="footer__nav-sublist">
                                 <li><a href="#" class ="footer__nav-sublink">Пальто</a></li>
                                 <li><a href="#" class ="footer__nav-sublink">Свитшоты</a></li>
@@ -306,7 +306,7 @@
                         </div>
                     </li>
                     <li class="footer__nav-item nav-item">
-                        <a class="footer__nav-link nav-link brand-page" href="#">О бренде</a>
+                        <a class="footer__nav-link nav-link brand-page" href="about.html">О бренде</a>
                     </li>
                     <li class="footer__nav-item nav-item">
                         <a class="footer__nav-link nav-link contacts-page" href="#">Контакты</a>
