--- a/about.html
+++ b/about.html
@@ -26,16 +26,16 @@
                 <!-- Навигация -->
                 <ul class="navbar-nav header-nav d-flex flex-row gap-4">
                     <li class="nav-item">
-                    <a class="nav-link main-page" href="index.html">Главная</a>
+                        <a class="nav-link main-page" href="index.html">Главная</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link shop-page" href="shop.html">Магазин</a>
+                        <a class="nav-link shop-page" href="shop.html">Магазин</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link brand-page active" href="about.html">О бренде</a>
+                        <a class="nav-link brand-page active" href="about.html">О бренде</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link contacts-page" href="#">Контакты</a>
+                        <a class="nav-link contacts-page" href="contacts.html">Контакты</a>
                     </li>
                 </ul>
 
@@ -188,7 +188,7 @@
                         <a class="footer__nav-link nav-link brand-page active" href="about.html">О бренде</a>
                     </li>
                     <li class="footer__nav-item nav-item">
-                        <a class="footer__nav-link nav-link contacts-page" href="#">Контакты</a>
+                        <a class="footer__nav-link nav-link contacts-page" href="contacts.html">Контакты</a>
                     </li>
                 </ul>
                 </div>
