--- a/about.html
+++ b/about.html
@@ -228,14 +228,7 @@
     <script src="js/vendor/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="https://unpkg.com/inputmask@5.0.8/dist/inputmask.min.js"></script>
-    <script>
-    const phoneInput = document.querySelector('input[name="phone"]');
-        Inputmask({
-            mask: "+7 (999) 999-99-99",
-            showMaskOnHover: false, 
-            showMaskOnFocus: true     
-        }).mask(phoneInput);
-    </script>
+    <script src="js/phone_mask.js"></script>
     <script src="js/popup.js"></script>
 </body>
 </html>
