feat: add success message

--- a/contacts.html
+++ b/contacts.html
@@ -152,13 +152,17 @@
                     <input type="tel" name="phone" class="form-input" placeholder=" " title="+7 (999) 123-45-67" required>
                     <label class="form-label">Телефон</label>
                 </div>
-                <div class="form-field contacts__form-field">
+                <div class="form-field contacts__form-field contacts__form-field--message">
                     <textarea name="message" class="form-input" placeholder=" " required></textarea>
                     <label class="form-label">Сообщение</label>
                 </div>
                 <button type="submit" class="btn shop-button contacts__submit">Отправить</button>
                 </form>
-
+                <div class="contacts__success-message">
+                    <p class="contacts__success-text">
+                        Сообщение успешно отправлено
+                    </p>
+                </div>
             </div>
     </section>
 
