--- a/contacts.html
+++ b/contacts.html
@@ -167,6 +167,72 @@
     </section>
 
 
+        <footer class="footer">
+        <div class="container">
+
+            <div class="row">
+                <div class="col-3 footer__info">
+                    <a href="#" class="navbar-brand footer__logo">
+                    <img src="img/logo.svg" alt="Logo" class="logo-img me-2">
+                    <span class="logo-text">Womazing</span>
+                </a>
+                    <p class="footer__legal">© Все права защищены</p>
+                    <p class="footer__legal">Политика конфиденциальности</p>
+                    <p class="footer__legal">Публичная оферта</p>
+                </div>
+                <div class="col-5 footer__nav">
+                    <ul class="footer__nav-list navbar-nav d-flex flex-row gap-4">
+                    <li class="footer__nav-item nav-item">
+                        <a class="footer__nav-link nav-link main-page" href="index.html">Главная</a>
+                    </li>
+                    <li class="footer__nav-item nav-item">
+                        <div class="footer__nav-shop">
+                            <a class="footer__nav-link nav-link shop-page" href="shop.html">Магазин</a>
+                            <ul class="footer__nav-sublist">
+                                <li><a href="#" class ="footer__nav-sublink">Пальто</a></li>
+                                <li><a href="#" class ="footer__nav-sublink">Свитшоты</a></li>
+                                <li><a href="#" class ="footer__nav-sublink">Кардиганы</a></li>
+                                <li><a href="#" class ="footer__nav-sublink">Толстовки</a></li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="footer__nav-item nav-item">
+                        <a class="footer__nav-link nav-link brand-page active" href="about.html">О бренде</a>
+                    </li>
+                    <li class="footer__nav-item nav-item">
+                        <a class="footer__nav-link nav-link contacts-page" href="contacts.html">Контакты</a>
+                    </li>
+                </ul>
+                </div>
+
+                <div class="offset-2 col-2 footer__contacts">
+                    <div class="footer__contacts-phone-and-email">
+                        <a href="tel:+74958235412" class="footer__contacts-phone">+7 (495) 823-54-12</a>
+                        <a href="mailto:info@womazing.ru" class="footer__contacts-email">info@womazing.ru</a>
+                    </div>
+                    <div class="footer__contacts-social">
+                        <a href="#" class="footer__contacts-link ms-0">
+                          <i class="fab fa-instagram footer__contacts-icon "></i>
+                        </a>
+                        <a href="#" class="footer__contacts-link">
+                            <i class="fab fa-facebook footer__contacts-icon"></i>
+                        </a>
+                        <a href="#" class="footer__contacts-link">
+                            <i class="fab fa-twitter footer__contacts-icon"></i>
+                        </a>
+
+                    </div>
+                    <div class="footer__contacts-visa">
+                        <img src="img/visa.png" alt="" class="footer__contacts-visa-img">
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+    </footer>
+
+
     <script src="js/vendor/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="https://unpkg.com/inputmask@5.0.8/dist/inputmask.min.js"></script>
