feat: add cart items section layout

--- a/contacts.html
+++ b/contacts.html
@@ -91,7 +91,7 @@
                 </div>
 
                     <a href="tel:+74958235412" class="phone-link ms-2">+7 (495) 823-54-12</a>
-                    <a href="#" class="cart-link ms-5">
+                    <a href="cart.html" class="cart-link ms-5">
                         <img src="img/cart.svg" alt="Cart" class="cart-icon">
                     </a>
                 </div>
