--- a/cart.html
+++ b/cart.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>О бренде</title>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
+    <title>Корзина</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,100..900;1,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -32,10 +32,10 @@
                         <a class="nav-link shop-page" href="shop.html">Магазин</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link brand-page active" href="about.html">О бренде</a>
+                        <a class="nav-link brand-page" href="about.html">О бренде</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link contacts-page" href="contacts.html">Контакты</a>
+                        <a class="nav-link contacts-page active" href="contacts.html">Контакты</a>
                     </li>
                 </ul>
 
@@ -57,37 +57,41 @@
                         </svg>
                     </button>
                     <div class="popup-overlay" id="popupOverlay">
-                        <div class="popup">
-                            <button class="popup-close" id="popupClose" aria-label="Закрыть"></button>
-                            <h3 class="popup-title">Заказать обратный звонок</h3>
-                            <form class="popup-form">
-                                <div class="popup-field">
-                                    <input type="text" name="name" class="popup-input" placeholder=" " required>
-                                    <label class="popup-label">Имя</label>
-                                </div>
-                                <div class="popup-field">
-                                    <input type="email" name="email" class="popup-input" placeholder=" " required>
-                                    <label class="popup-label">Email</label>
-                                </div>
-                                <div class="popup-field">
-                                    <input type="tel" name="phone" class="popup-input" placeholder=" " title="+7 (999) 123-45-67" required>
-                                    <label class="popup-label">Телефон</label>
-                                </div>
-                                <button type="submit" class="popup-submit">Заказать звонок</button>
-                            </form>
+                    <div class="popup">
+                        <button class="popup-close" id="popupClose" aria-label="Закрыть"></button>
+                        <h3 class="popup-title">Заказать обратный звонок</h3>
+                        <form class="popup-form form">
+                        <div class="form-field">
+                            <input type="text" name="name" class="form-input" placeholder=" " required>
+                            <label class="form-label">Имя</label>
                         </div>
-                    </div>
-                    <div class="popup-overlay" id="successPopup" style="display:none;">
-                        <div class="popup success-popup">
-                            <h3 class="popup-title">Отлично! Мы скоро вам перезвоним.</h3>
-                            <button class="btn outline-shop-button popup-success-close" id="successClose" aria-label="Закрыть">Закрыть</button>
+                        <div class="form-field">
+                            <input type="email" name="email" class="form-input" placeholder=" " required>
+                            <label class="form-label">Email</label>
                         </div>
+                        <div class="form-field">
+                            <input type="tel" name="phone" class="form-input" placeholder=" " title="+7 (999) 123-45-67" required>
+                            <label class="form-label">Телефон</label>
+                        </div>
+                        <button type="submit" class="popup-submit">Заказать звонок</button>
+                        </form>
                     </div>
+                    </div>
+
+                    <div class="popup-overlay" id="successPopup" style="display: none;">
+                    <div class="popup success-popup">
+                        <h3 class="popup-title">Отлично! Мы скоро вам перезвоним.</h3>
+                        <button class="btn outline-shop-button popup-success-close" id="successClose" aria-label="Закрыть">
+                        Закрыть
+                        </button>
+                    </div>
+                    </div>
+
 
                 </div>
 
                     <a href="tel:+74958235412" class="phone-link ms-2">+7 (495) 823-54-12</a>
-                    <a href="cart.html" class="cart-link ms-5">
+                    <a href="#" class="cart-link ms-5">
                         <img src="img/cart.svg" alt="Cart" class="cart-icon">
                     </a>
                 </div>
@@ -98,62 +102,74 @@
     </header>
 
 
+
     <section class="section page-hero">
         <div class="container">
-            <h1 class="section-title page-hero__title">О бренде</h1>
+            <h1 class="section-title page-hero__title">Корзина</h1>
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="index.html">Главная</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">О бренде</li>
+                    <li class="breadcrumb-item active" aria-current="page">Корзина</li>
                 </ol>
             </nav>
         </div>
     </section>
 
-    <section class="section about">
+    <section class="section cart">
         <div class="container">
             <div class="row">
-                <div class="col-6 about__image-block about__image-block--left">
-                    <img src="img/about-img1.png" alt="" class="about__img img-fluid">
+                <div class="col-5">
+                    <h4 class="cart__header">
+                        Товар
+                    </h4>
                 </div>
-                <div class="col-6 about__text-block">
-                    <h3 class="about__subtitle">
-                        Идея и женщина
-                    </h3>
-                    <div class="about__par-block">
-                        <p class="about__text">
-                            Womazing была основана в 2010-ом и стала одной из самых успешных компаний нашей страны. Как и многие итальянские фирмы, Womazing остаётся семейной компанией, хотя ни один из членов семьи не является модельером.
-                        </p>
-                        <p class="about__text">
-                            Мы действуем по успешной формуле, прибегая к услугам известных модельеров для создания своих коллекций. Этот метод был описан критиком моды Колином Макдауэллом как форма дизайнерского со-творчества, характерная для ряда итальянских prêt-a-porter компаний. 
-                        </p>
-                    </div>
-                </div>  
-            </div>
-            <div class="row">
-
-                <div class="col-6 about__text-block">
-                    <h3 class="about__subtitle">
-                        Магия в деталях
-                    </h3>
-                    <div class="about__par-block">
-                        <p class="about__text">
-                            Первый магазин Womazing был открыт в маленьком городке на севере страны в 2010-ом году. Первая коллекция состояла из двух пальто и костюма, которые были копиями парижских моделей.
-                        </p>
-                        <p class="about__text">
-                            Несмотря на то, что по образованию основательница была адвокатом, ее семья всегда была тесно связана с шитьём (прабабушка основательницы шила одежду для женщин, а мать основала профессиональную школу кроя и шитья). Стремление производить одежду для масс несло в себе большие перспективы, особенно в то время, когда высокая мода по-прежнему доминировала, а рынка качественного prêt-a-porter попросту не существовало. 
-                        </p>
-                    </div>
-                </div>  
-                <div class="col-6 about__image-block about__image-block--right">
-                    <img src="img/about-img2.png" alt="" class="about__img img-fluid">
+                <div class="col-2">
+                    <h4 class="cart__header">
+                        Цена
+                    </h4>
+                </div>
+                <div class="col-3">
+                    <h4 class="cart__header">
+                        Количество
+                    </h4>
+                </div>
+                <div class="col-2">
+                    <h4 class="cart__header">
+                        Всего
+                    </h4>
                 </div>
             </div>
-            <div class="about__button">
-                <a href="shop.html" class="btn shop-button">Перейти в магазин</a>
+            <hr>
+            <div class="row cart__item">
+                <div class="col-5 cart__product">
+                    <button class="btn cart__product-remove-btn">×</button>
+                    <a href="#" class="cart__product-link">
+                        <img src="img/shop_item1.png" alt="Item" class="cart__product-image img-fluid">
+                    </a>
+                    <a href="#" class="cart__product-link">
+                    <p class="cart__product-name">Футболка USA</p>
+                    </a>
+                </div>
+                <div class="col-2 cart__price">
+                    <p class="cart__price-value">$129</p>
+                </div>
+                <div class="col-3 cart__quantity">
+                    <div class="product-card__quantity-wrapper">
+                        <button class="product-card__quantity-btn product-card__quantity-btn--minus">−</button>
+                        <input type="number" class="product-card__quantity-input" value="1" min="1">
+                        <button class="product-card__quantity-btn product-card__quantity-btn--plus">+</button>
+                    </div>
+                </div>
+                <div class="col-2 cart__total">
+                    <p class="cart__total-value">$129</p>
+                </div>
             </div>
         </div>
     </section>
+
+
+
+
 
     <footer class="footer">
         <div class="container">
@@ -221,14 +237,11 @@
     </footer>
 
 
-
-
-
-
     <script src="js/vendor/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="https://unpkg.com/inputmask@5.0.8/dist/inputmask.min.js"></script>
     <script src="js/phone_mask.js"></script>
+        <script src="js/product_card_quantity.js"></script>
     <script src="js/popup.js"></script>
 </body>
 </html>
