feat: add coupon button and summary block

--- a/cart.html
+++ b/cart.html
@@ -164,6 +164,31 @@
                     <p class="cart__total-value">$129</p>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-6 coupon">
+                    <div class="form-field m-0">
+                        <input type="text" name="coupon" class="form-input" placeholder=" " required>
+                        <label class="form-label">Введите купон</label>
+                    </div>
+                    <a href="#" class="btn outline-shop-button coupon__button">Применить купон</a>
+                </div>
+                <div class="col-6 update-cart">
+                    <a href="#" class="btn outline-shop-button update-cart__button">Обновить корзину</a>
+                </div>
+            </div>
+            <div class="row presummary">
+                <div class="offset-6 col-2">
+                    <p class="presummary__text">Подытог: $129</p>
+                </div>
+            </div>
+            <div class="row ">
+                <div class="offset-6 col-6 summary">
+                    <p class="summary__text"><span class="summary__span">Итого:</span> <span class="summary__sum">$129</span></p>
+                    <a href="#" class="btn shop-button summary__button">Оформить заказ</a>
+                </div>
+                
+            </div>
+            
         </div>
     </section>
 
@@ -232,6 +257,7 @@
                 </div>
 
             </div>
+
 
         </div>
     </footer>
