--- a/cart.html
+++ b/cart.html
@@ -35,7 +35,7 @@
                         <a class="nav-link brand-page" href="about.html">О бренде</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link contacts-page active" href="contacts.html">Контакты</a>
+                        <a class="nav-link contacts-page" href="contacts.html">Контакты</a>
                     </li>
                 </ul>
 
@@ -226,7 +226,7 @@
                         </div>
                     </li>
                     <li class="footer__nav-item nav-item">
-                        <a class="footer__nav-link nav-link brand-page active" href="about.html">О бренде</a>
+                        <a class="footer__nav-link nav-link brand-page" href="about.html">О бренде</a>
                     </li>
                     <li class="footer__nav-item nav-item">
                         <a class="footer__nav-link nav-link contacts-page" href="contacts.html">Контакты</a>
