--- a/contacts.html
+++ b/contacts.html
@@ -197,10 +197,10 @@
                         </div>
                     </li>
                     <li class="footer__nav-item nav-item">
-                        <a class="footer__nav-link nav-link brand-page active" href="about.html">О бренде</a>
+                        <a class="footer__nav-link nav-link brand-page" href="about.html">О бренде</a>
                     </li>
                     <li class="footer__nav-item nav-item">
-                        <a class="footer__nav-link nav-link contacts-page" href="contacts.html">Контакты</a>
+                        <a class="footer__nav-link nav-link contacts-page active" href="contacts.html">Контакты</a>
                     </li>
                 </ul>
                 </div>
