feat: add link to confirm order

--- a/checkout.html
+++ b/checkout.html
@@ -207,7 +207,7 @@
                             <span class="radio-text">Оплата наличными</span>
                         </label>
                         </form>
-                        <a href="#" class="btn shop-button order__payment-method-btn">Разместить заказ</a>
+                        <a href="order-confirm.html" class="btn shop-button order__payment-method-btn">Разместить заказ</a>
                     </div>
                 </div>
 
@@ -293,6 +293,8 @@
 
         </div>
     </footer>
+
+
 
 
     <script src="js/vendor/bootstrap.bundle.min.js"></script>
