feat: create homepage app

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -99,7 +99,7 @@
         </nav>
     </header>
     <div class="main-wrapper">
-        <main class="main">
+        <div class="main">
             <div class="container">
 
                 <div class="row">
